Fix for bug 78820 - right aligned floater in nowrap blocks are not positioned correctly. r= alexsavulov sr= kin